fix: Abyss: Help dialog contents heading is unreadable http://bugs.activestate.com/show_bug.cgi?id=100114
(integrated from komodo (trunk) change 83154 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@14009 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/window.less
+++ b/src/chrome/komodo/skin/plat/shared/window.less
@@ -603,3 +603,9 @@ ko-findbar
     background: @window-background;
     border-top: @main-border;
 }
+
+/* Misc */
+sidebarheader
+{
+    background: @window-background;
+}
